--- a/Contact.html
+++ b/Contact.html
@@ -78,7 +78,7 @@
                 <!-- Sidebar user panel -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="../../dist/img/IMG-7264.jpg" class="img-circle" alt="User Image">
+                        <img src="dist/img/IMG-7264.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
                         <p>Jirapa Singnoi</p>
@@ -153,7 +153,7 @@
                                     <h5 class="widget-user-desc">Engineering Student</h5>
                                 </div>
                                 <div class="widget-user-image">
-                                    <img class="img-circle" src="../dist/img/IMG-7264.jpg" alt="Jill Jirapa ">
+                                    <img class="img-circle" src="dist/img/IMG-7264.jpg" alt="Jill Jirapa ">
                                 </div>
                                 <div class="box-footer">
                                     <div class="row">
