--- a/Gallery.html
+++ b/Gallery.html
@@ -30,7 +30,7 @@
      
     </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-red sidebar-mini">
     <!-- Site wrapper -->
     <div class="wrapper">
 
@@ -115,6 +115,13 @@
                             <i class="fa fa-commenting"></i> <span>Contact</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="GAMEE.html">
+                            <i class="fa fa-gamepad"></i> <span>Game</span>
+                        </a>
+                    </li>
+
+
 
 
 
@@ -368,7 +375,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"
         integrity="sha256-t6SrqvTQmKoGgi5LOl0AUy+lBRtIvEJ+++pLAsfAjWs=" crossorigin="anonymous"></script>
     <!-- AdminLTE App -->
-    <script src="/dist/js/adminlte.min.js"></script>
+    <script src="./dist/js/adminlte.min.js"></script>
 </body>
 
 </html>
